:lipstick: FIX horizontal scroll

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 /* -------------------------------header------------------------ */
 
 header{
-	width: 100vw;
+	width: 100%;
 	height: 100px;
 	background-color: #FEFEFE;
 	display: flex;
